@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.440 2005/10/25 23:59:48 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.441 2005/10/26 00:53:23 agaffney Exp $
 
 *GLI-0.3 (17 Oct 2005)
 
@@ -12,6 +12,8 @@
   doubled the buffer size in spawn()
   bump buffer size up to 16384
   only report progress in 5% increments
+  src/GLIArchitectureTemplate.py:
+  kernelpkgs.txt support code
 
   24 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIArchitectureTemplate.py:
